--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "without_cra",
+  "name": "drag_drop",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
-    "start": "webpack-dev-server --progress --mode development",
+    "dev": "webpack-dev-server --progress --mode development",
     "build": "webpack --progress --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,12 +15,9 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-react": "^7.17.12",
-    "aos": "^2.3.4",
-    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
     "serve": "^13.0.2"
   },
   "devDependencies": {
